feat: connect database and create table cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=nvpag-api
+spring.datasource.url=jdbc:mysql://localhost:3306/nvpag?createDatabaseIfNotExist=true&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=
